--- a/background-slider/style.css
+++ b/background-slider/style.css
@@ -13,4 +13,68 @@ body{
     height: 100vh;
     justify-content: center;
     align-items: center;
+    background-position: center center;
+    background-size: cover;
+    transition: 0.4s ease;   
 }
+
+body::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: -1;
+}
+
+.slider-container{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    width: 70vw;
+    height: 70vh;
+    position: relative;
+    overflow: hidden;
+}
+
+.slide{
+    opacity: 0;
+    height: 100vh;
+    width: 100vw;
+    background-position: center center;
+    background-size: cover;
+    position: absolute;
+    top: -15vh;
+    left: -15vw;
+    transition: 0.4s ease;
+    z-index: 1;
+}
+
+.slide.active{
+    opacity: 1;
+}
+
+.arrow{
+    position: fixed;
+    background-color: transparent;
+    padding: 20px;
+    font-size: 30px;
+    border: 2px solid orange;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #fff;
+    cursor: pointer;
+}
+
+.arrow:focus{
+    outline: 0;
+}
+
+.arrow-left{
+    left: calc(15vw - 65px);
+}
+
+.arrow-right{
+    right: calc(15vw - 65px);
+}
+
